--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build-image-creation-wizard
+name: build-ublue
 on:
   pull_request:
     branches:
@@ -9,7 +9,7 @@ on:
     branches:
       - main
 env:
-  IMAGE_NAME: image-creation-wizard
+  IMAGE_NAME: create-ublue-image
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
